CHANGES
*******

0.7.1 (unreleased)
==================

- Nothing changed yet.


0.7 (2015-03-13)
================

- Remove dependencies on zope.app.*
  [davisagli]


0.6.3 (2014-04-15)
==================

* Remove dependency on grok.
  [pbauer, jensens]


0.6.2 (2012-12-06)
==================

* Updated test setup and test to run with current versions of dependent
  packages, thus running with Python 2.6, too.

* Added missing (test) dependencies.

* Rename __neq__ method to __ne__ since __neq__ is not the right builtin
  name for != handlers.


0.6.1 (2009-10-11)
==================

* Fixes broken release.

0.6 (2009-10-11)
================

* Ensure that the value_type of a RelationList is not overwritten to be 'None'
  when the field is constructed.

0.5 (2009-06-30)
================

* Move lxml and schema2xml dependencies to an [xml] extra so that people can
  use this package without having to install lxml, which still causes issues
  on some platforms. If z3c.schema2xml and lxml are not importable, the
  relevant adapters will not be defined, but everything else will still work.

* Subscribe to IIntIdAddedEvent instead of IObjectAddedEvent to prevent
  errors due to subscriber ordering.


0.4.3 (2009-06-04)
==================

* Add missing dependency for lxml.


0.4.2 (2009-04-22)
==================

* Prevent the event failures from failing when utilities are missing or when
  objects do not implement IContained.


0.4.1 (2009-02-12)
==================

* Don't handle ``IObjectModified`` events for objects that do not yet
  have a parent. There is no need to do so anyway, as these objects cannot
  have outgoing relations indexed.

0.4 (2009-02-10)
================

* Introduce a ``RelationChoice`` field that behaves like
  ``schema.Choice`` but tracks relations. In combination with a source
  (such as created by ``RelationSourceFactory`` provided by
  ``z3c.relationfieldui``) this can be used to create drop-down
  selections for relations.
