@@ -1,18 +1,18 @@
 from lxml import etree
-from z3c.relationfield.relation import TemporaryRelationValue
-from z3c.relationfield.interfaces import IRelationList
 from z3c.relationfield.interfaces import IRelation
+from z3c.relationfield.interfaces import IRelationList
+from z3c.relationfield.relation import TemporaryRelationValue
 from z3c.schema2xml import IXMLGenerator
 from zope.component import adapter
-from zope.interface import implements
+from zope.interface import implementer
 
 
 @adapter(IRelationList)
+@implementer(IXMLGenerator)
 class RelationListGenerator(object):
     """Export a relation list to XML.
     """
 
-    implements(IXMLGenerator)
 
     def __init__(self, context):
         self.context = context
@@ -32,11 +32,10 @@ class RelationListGenerator(object):
 
 
 @adapter(IRelation)
+@implementer(IXMLGenerator)
 class RelationGenerator(object):
     """Eport a relation to XML.
     """
-
-    implements(IXMLGenerator)
 
     def __init__(self, context):
         self.context = context
