@@ -4,7 +4,8 @@ CHANGES
 0.7.1 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Python 3 compatibility: use the implementer decorator
+  [ale-rt]
 
 
 0.7 (2015-03-13)
